--- a/Personnal Website/FR/css/a_general.css
+++ b/Personnal Website/FR/css/a_general.css
@@ -61,3 +61,14 @@ a[href^="mailto:"]
     height:29.7cm;
     margin: 0mm 0mm 0mm 0mm;
 }
+
+.list_same_vertical_position{
+    position:relative;
+    left:-20px;
+    top: -10px;
+    margin-bottom: -3px;
+}
+
+.pagebreak{
+    page-break-before: always; 
+}
